--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "dependencies": {
     "angular": "^1.5.8",
     "babel-polyfill": "^6.13.0",
-    "jquery": "^3.1.0",
+    "jquery": "^3.1.1",
     "webpack": "^1.13.2"
   },
   "scripts": {
     "start": "node ./bin/www.js",
-    "alerw":"node ./bin/www.js"
+    "alerw": "node ./bin/www.js"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
@@ -24,6 +24,7 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "image-webpack-loader": "^2.0.0",
+    "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1"
   }
