--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "image-webpack-loader": "^2.0.0",
     "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "style-loader": "^0.13.1"
   }
 }
